[package]
name = "bench_rs"
version = "0.1.0"
authors = ["yukihir0 <yukihiro.cotori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.6.5", features = ["attributes"]}
mockito = "0.27.0"
surf = "2.0.0"
url = "2.1.1"
