[package]
name = "bench_rs"
version = "0.1.0"
authors = ["yukihir0 <yukihiro.cotori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
async-std = {version = "1.6.5", features = ["attributes"]}
clap = "3.0.0-beta.2"
env_logger = "0.8.1"
log = "0.4.11"
mockito = "0.27.0"
num_cpus = "1.13.0"
serde = "1.0.117"
serde_json = "1.0.59"
surf = "2.0.0"
thiserror = "1.0.21"
url = "2.1.1"
