[package]
name = "bench_rs"
version = "0.1.0"
authors = ["yukihir0 <yukihiro.cotori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-std = {version = "1.10.0", features = ["attributes"]}
clap = "3.0.0-beta.4"
crossbeam-channel = "0.5.1"
env_logger = "0.9.0"
log = "0.4.14"
mockito = "0.30.0"
num_cpus = "1.13.0"
serde = "1.0.130"
serde_json = "1.0.68"
surf = "2.3.1"
thiserror = "1.0.29"
url = "2.2.2"
